Logo Update on all pages

--- a/braine/pulse-insights.html
+++ b/braine/pulse-insights.html
@@ -76,7 +76,7 @@
                   <div class="logo-box">
                     <div class="logo">
                       <a href="index.html"
-                        ><img src="assets/images/logo.svg" alt="" title=""
+                        ><img src="assets/images/logo.png" alt="" title=""
                       /></a>
                     </div>
                   </div>
@@ -243,7 +243,7 @@
           <nav class="menu-box">
             <div class="nav-logo">
               <a href="index.html"
-                ><img src="assets/images/mobile-logo.svg" alt="" title=""
+                ><img src="assets/images/mobile-logo.png" alt="" title=""
               /></a>
             </div>
             <div class="menu-outer">
@@ -300,16 +300,21 @@
               class="d-flex justify-content-between align-items-center flex-wrap"
             >
               <div class="left-box">
-                <div class="sec-title_title">The D2C problem </div>
+                <div class="sec-title_title">The D2C problem</div>
                 <h2 class="sec-title_heading">
                   Making sense of your ad and website data
                 </h2>
               </div>
               <div class="right-box">
                 <p>
-                  D2C teams face the challenge of correctly interpreting ad campaign and website data to optimize performance and drive growth. 
-                  <br/><br/>
-                  This task requires an experienced and specialized insights manager to collate, analyze, and correlate siloed data to provide actionable insights to the marketing team. However, hiring such expertise can be expensive.
+                  D2C teams face the challenge of correctly interpreting ad
+                  campaign and website data to optimize performance and drive
+                  growth.
+                  <br /><br />
+                  This task requires an experienced and specialized insights
+                  manager to collate, analyze, and correlate siloed data to
+                  provide actionable insights to the marketing team. However,
+                  hiring such expertise can be expensive.
                 </p>
               </div>
             </div>
@@ -414,7 +419,8 @@
             <div class="sec-title">
               <div class="sec-title_title">XI Powered Pulse Insights</div>
               <h2 class="sec-title_heading">
-                Valuable, time-saving web <br/> and ad insights
+                Valuable, time-saving web <br />
+                and ad insights
               </h2>
             </div>
             <!-- <div class="steps-one_button">
@@ -436,7 +442,8 @@
                       Multi-level ad insights
                     </h5>
                     <div class="step-block_one-text">
-                      Gives you 6 key performance metrics at the ad, ad set, and campaign level. 
+                      Gives you 6 key performance metrics at the ad, ad set, and
+                      campaign level.
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
@@ -448,9 +455,13 @@
                 <div class="step-block_one">
                   <div class="step-block_one-inner">
                     <div class="step-block_one-steps">XI Engine</div>
-                    <h5 class="step-block_one-title">Correlations and Recommendations</h5>
+                    <h5 class="step-block_one-title">
+                      Correlations and Recommendations
+                    </h5>
                     <div class="step-block_one-text">
-                      Our ML algorithms compare current ad performance to past campaigns, compare key KPI metrics, and provide improvement recommendations.
+                      Our ML algorithms compare current ad performance to past
+                      campaigns, compare key KPI metrics, and provide
+                      improvement recommendations.
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
@@ -466,9 +477,13 @@
                 <div class="step-block_one">
                   <div class="step-block_one-inner">
                     <div class="step-block_one-steps">XI Engine</div>
-                    <h5 class="step-block_one-title">Deep Web Traffic Insights</h5>
+                    <h5 class="step-block_one-title">
+                      Deep Web Traffic Insights
+                    </h5>
                     <div class="step-block_one-text">
-                      Track user origins, regional traffic, and access devices to optimize your marketing strategy with detailed behavioral insights.
+                      Track user origins, regional traffic, and access devices
+                      to optimize your marketing strategy with detailed
+                      behavioral insights.
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
@@ -485,9 +500,14 @@
                 <div class="step-block_one">
                   <div class="step-block_one-inner">
                     <div class="step-block_one-steps">XI Engine</div>
-                    <h5 class="step-block_one-title">Co relate website events and outcomes</h5>
+                    <h5 class="step-block_one-title">
+                      Co relate website events and outcomes
+                    </h5>
                     <div class="step-block_one-text">
-                      Our AI reveals key correlations in user behavior and KPI outcomes, helping you identify product preferences, frequently bought items, and more for data-driven audience targeting and stock management.
+                      Our AI reveals key correlations in user behavior and KPI
+                      outcomes, helping you identify product preferences,
+                      frequently bought items, and more for data-driven audience
+                      targeting and stock management.
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
@@ -516,9 +536,7 @@
             >
               <div class="left-box">
                 <div class="sec-title_title">XI Powered Pulse Insights</div>
-                <h2 class="sec-title_heading">
-                  360° Ad & Website Insights
-                </h2>
+                <h2 class="sec-title_heading">360° Ad & Website Insights</h2>
               </div>
               <div class="right-box">
                 <p class="d-none">
@@ -530,37 +548,43 @@
                 </p>
                 <ul class="solution-one_list">
                   <li>
-                    <i class="fa-solid fa-check fa-fw"></i>AI-driven web and ad analysis by Flable’s XI engine
+                    <i class="fa-solid fa-check fa-fw"></i>AI-driven web and ad
+                    analysis by Flable’s XI engine
                   </li>
                   <li>
                     <i class="fa-solid fa-check fa-fw"></i>
                     Insights akin to expert insights manager and data scientist
-                    
                   </li>
                   <li>
-                    <i class="fa-solid fa-check fa-fw"></i>Optimizes funnel flow and enhances visitor understanding.
+                    <i class="fa-solid fa-check fa-fw"></i>Optimizes funnel flow
+                    and enhances visitor understanding.
                   </li>
                   <li>
-                    <i class="fa-solid fa-check fa-fw"></i>Develops actionable marketing strategies based on data insights.
+                    <i class="fa-solid fa-check fa-fw"></i>Develops actionable
+                    marketing strategies based on data insights.
                   </li>
                   <li>
-                    <i class="fa-solid fa-check fa-fw"></i>Drives business growth through informed decision-making.
-                    ads.
+                    <i class="fa-solid fa-check fa-fw"></i>Drives business
+                    growth through informed decision-making. ads.
                   </li>
                   <li>
-                    <i class="fa-solid fa-check fa-fw"></i>Delivers critical insights at campaign, ad set, and individual ad levels.
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check fa-fw"></i>
-                    Analyzes ad data from Meta Ads, Google Ads, Bing Ads, and more.
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check fa-fw"></i>
-                    Processes over 600 ad metrics in real-time using complex algorithms.
+                    <i class="fa-solid fa-check fa-fw"></i>Delivers critical
+                    insights at campaign, ad set, and individual ad levels.
                   </li>
                   <li>
                     <i class="fa-solid fa-check fa-fw"></i>
-                    Identifies anomalies, optimal target audiences, regions, ad placements, and devices.
+                    Analyzes ad data from Meta Ads, Google Ads, Bing Ads, and
+                    more.
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check fa-fw"></i>
+                    Processes over 600 ad metrics in real-time using complex
+                    algorithms.
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check fa-fw"></i>
+                    Identifies anomalies, optimal target audiences, regions, ad
+                    placements, and devices.
                   </li>
                 </ul>
               </div>
@@ -964,7 +988,7 @@
             >
               <div class="footer-logo">
                 <a href="index.html"
-                  ><img src="assets/images/logo.svg" alt="" title=""
+                  ><img src="assets/images/logo.png" alt="" title=""
                 /></a>
               </div>
               <div class="footer-copyright">
