--- a/braine/index-2.html
+++ b/braine/index-2.html
@@ -88,7 +88,7 @@
                   <div class="logo-box">
                     <div class="logo">
                       <a href="index.html"
-                        ><img src="assets/images/logo.svg" alt="" title=""
+                        ><img src="assets/images/logo.png" alt="" title=""
                       /></a>
                     </div>
                   </div>
@@ -255,7 +255,7 @@
           <nav class="menu-box">
             <div class="nav-logo">
               <a href="index.html"
-                ><img src="assets/images/mobile-logo.svg" alt="" title=""
+                ><img src="assets/images/mobile-logo.png" alt="" title=""
               /></a>
             </div>
             <div class="menu-outer">
@@ -1813,7 +1813,7 @@
             >
               <div class="footer-logo">
                 <a href="index.html"
-                  ><img src="assets/images/logo.svg" alt="" title=""
+                  ><img src="assets/images/logo.png" alt="" title=""
                 /></a>
               </div>
               <!-- Social Box -->
