--- a/braine/index.html
+++ b/braine/index.html
@@ -73,7 +73,7 @@
                 <div class="logo-box">
                   <div class="logo">
                     <a href="index.html"
-                      ><img src="assets/images/logo.svg" alt="" title=""
+                      ><img src="assets/images/logo.png" alt="" title=""
                     /></a>
                   </div>
                 </div>
@@ -245,7 +245,7 @@
           <nav class="menu-box">
             <div class="nav-logo">
               <a href="index.html"
-                ><img src="assets/images/mobile-logo.svg" alt="" title=""
+                ><img src="assets/images/mobile-logo.png" alt="" title=""
               /></a>
             </div>
             <div class="menu-outer">
@@ -2182,7 +2182,7 @@
             >
               <div class="footer-logo">
                 <a href="index.html"
-                  ><img src="assets/images/logo.svg" alt="" title=""
+                  ><img src="assets/images/logo.png" alt="" title=""
                 /></a>
               </div>
               <div class="footer-copyright">
