--- a/braine/not-found.html
+++ b/braine/not-found.html
@@ -74,7 +74,7 @@
                   <div class="logo-box">
                     <div class="logo">
                       <a href="index.html"
-                        ><img src="assets/images/logo.svg" alt="" title=""
+                        ><img src="assets/images/logo.png" alt="" title=""
                       /></a>
                     </div>
                   </div>
@@ -241,7 +241,7 @@
           <nav class="menu-box">
             <div class="nav-logo">
               <a href="index.html"
-                ><img src="assets/images/mobile-logo.svg" alt="" title=""
+                ><img src="assets/images/mobile-logo.png" alt="" title=""
               /></a>
             </div>
             <div class="menu-outer">
@@ -470,7 +470,7 @@
             >
               <div class="footer-logo">
                 <a href="index.html"
-                  ><img src="assets/images/logo.svg" alt="" title=""
+                  ><img src="assets/images/logo.png" alt="" title=""
                 /></a>
               </div>
               <div class="footer-copyright">
