--- a/braine/index.html
+++ b/braine/index.html
@@ -1782,9 +1782,7 @@
             </h2>
           </div>
           <div class="social-one_logo">
-            <span
-              ><img src="assets/images/icons/social-logo.png" alt=""
-            /></span>
+            <span><img src="assets/images/logo.png" alt="" /></span>
           </div>
           <div class="inner-container">
             <div
@@ -1805,43 +1803,55 @@
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-1.png" alt="" />
+                    <img src="assets/images/icons/social1.png" alt="" />
                   </a>
                 </div>
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-2.png" alt="" />
+                    <img src="assets/images/icons/social12.png" alt="" />
                   </a>
                 </div>
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-3.png" alt="" />
+                    <img
+                      src="assets/images/icons/social13.png"
+                      alt=""
+                      class="bgchange"
+                    />
                   </a>
                 </div>
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-4.png" alt="" />
+                    <img
+                      src="assets/images/icons/social14.png"
+                      alt=""
+                      class="bgchange"
+                    />
                   </a>
                 </div>
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-5.png" alt="" />
+                    <img
+                      src="assets/images/icons/social15.png"
+                      alt=""
+                      class="bgchange"
+                    />
                   </a>
                 </div>
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-6.png" alt="" />
+                    <img src="assets/images/icons/social16.png" alt="" />
                   </a>
                 </div>
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-7.png" alt="" />
+                    <img src="assets/images/icons/social17.png" alt="" />
                   </a>
                 </div>
               </div>
@@ -1852,45 +1862,45 @@
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-8.png" alt="" />
+                    <img src="assets/images/icons/social18.png" alt="" />
                   </a>
                 </div>
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-9.png" alt="" />
+                    <img src="assets/images/icons/social19.png" alt="" />
                   </a>
                 </div>
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-10.png" alt="" />
+                    <img src="assets/images/icons/social10.png" alt="" />
                   </a>
                 </div>
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-11.png" alt="" />
+                    <img src="assets/images/icons/social111.png" alt="" />
                   </a>
                 </div>
                 <!-- Icon -->
                 <div class="social_icon-box">
                   <a href="#">
-                    <img src="assets/images/icons/social-12.png" alt="" />
+                    <img src="assets/images/icons/social1112.png" alt="" />
                   </a>
                 </div>
                 <!-- Icon -->
-                <div class="social_icon-box">
+                <!-- <div class="social_icon-box">
                   <a href="#">
                     <img src="assets/images/icons/social-13.png" alt="" />
                   </a>
-                </div>
+                </div> -->
                 <!-- Icon -->
-                <div class="social_icon-box">
+                <!-- <div class="social_icon-box">
                   <a href="#">
                     <img src="assets/images/icons/social-14.png" alt="" />
                   </a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
