Markup Points Fix

--- a/braine/index.html
+++ b/braine/index.html
@@ -536,9 +536,13 @@
                 data-wow-delay="0ms"
                 data-wow-duration="1500ms"
               >
-                <div class="service-block_one-icon">
-                  <i class="icon-tag"></i>
+                <div class="icon_with_text_services">
+                  <div class="service-block_one-icon">
+                    <i class="icon-tag"></i>
+                  </div>
+                  <span><i>Coming soon</i></span>
                 </div>
+
                 <h5 class="service-block_one-heading">
                   <a href="/" onclick="return false;">Journey Tracker</a>
                 </h5>
@@ -564,9 +568,13 @@
                 data-wow-delay="0ms"
                 data-wow-duration="1500ms"
               >
-                <div class="service-block_one-icon">
-                  <i class="icon-tag"></i>
+                <div class="icon_with_text_services">
+                  <div class="service-block_one-icon">
+                    <i class="icon-tag"></i>
+                  </div>
+                  <span><i>Coming soon</i></span>
                 </div>
+
                 <h5 class="service-block_one-heading">
                   <a href="/" onclick="return false;">NextGen Connector</a>
                 </h5>
